# Motion-Physics

./: CMakeLists.txt  README.md  parameters.h  shape.h  timeline.cpp  timeline.h  vector3d.cpp  vector3d.h
source/: formulas.cpp  formulas.h  kinematics.cpp  kinematics.h  main.cpp  object.cpp  object.h  parameters.cpp  parameters.h  shape.cpp  time.cpp  time.h  timeline.cpp  timeline.h
